# last-stand

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
assets/maps/: castle.json  desert.json  forest.json
src/: main.cpp
src/ai/: pathfinding.hpp
src/components/: components.hpp
src/core/: asset_paths.hpp  biome_theme.hpp  constants.hpp  event_bus.hpp  game.hpp  hero_upgrades.hpp  state_machine.hpp  types.hpp
src/factory/: enemy_factory.hpp  hero_factory.hpp  projectile_factory.hpp  tower_factory.hpp
src/managers/: asset_manager.hpp  map_manager.hpp  save_manager.hpp  sound_manager.hpp  tower_registry.hpp  wave_manager.hpp
src/states/: gameover_state.cpp  gameover_state.hpp  map_select_state.cpp  map_select_state.hpp  menu_state.cpp  menu_state.hpp  paused_state.cpp  paused_state.hpp  playing_state.cpp  playing_state.hpp  upgrade_state.cpp  upgrade_state.hpp
src/systems/: systems.cpp  systems.hpp
tests/: CMakeLists.txt  raylib_stub.h  test_constants.cpp  test_enemy_stats.cpp  test_grid_pos.cpp  test_hero_upgrades.cpp  test_map_data.cpp  test_pathfinding.cpp  test_tower_hp.cpp  test_tower_registry.cpp  test_vec2.cpp  test_wave_manager.cpp
web/: shell.html
